Bug 1666620 - Close the transaction when Http3Session::Init failed, r=dragana,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D91115