netwerk/protocol/http/nsHttpTransaction.h
@@ -103,6 +103,7 @@ class nsHttpTransaction final : public nsAHttpTransaction,
   void RemoveDispatchedAsBlocking();
 
   void DisableSpdy() override;
+  void DisableHttp3();
 
   nsHttpTransaction* QueryHttpTransaction() override { return this; }
 
